# internal/model/account_role.go
@@ -1,0 +1,6 @@
+package model
+
+type AccountRole struct {
+	AccountID int      `db:"account_id"`
+	Role      RoleName `db:"role"`
+}
